build: Read POTFILES.in at 'make' time, not at 'configure' time.
* gettext-runtime/m4/po.m4 (AM_PO_SUBDIRS): Bump GETTEXT_MACRO_VERSION to 0.24.
Don't create POTFILES any more.
(AM_POSTPROCESS_PO_MAKEFILE): Don't substitute POTFILES_DEPS any more.
* gettext-runtime/po/Makefile.in.in (GETTEXT_MACRO_VERSION): Bump to 0.24.
Mention 'make' requirements.
(POTFILES, POTFILES_DEPS): Define with a computed value.
($(DOMAIN).pot-update): Depend on POTFILES_DEPS, not POTFILES.
(distclean): Don't remove POTFILES any more.
* gettext-tools/examples/README: Mention 'make' requirements.
* gettext-tools/examples/po/Makefile.am (POTFILES_DEPS): Define with a computed
value.
* gettext-tools/examples/hello-*/po/Makefile.am (POTFILES_DEPS): Likewise.

--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -86,3 +86,14 @@ Makefile types:
     hello-c++-qt               .qm                     Makefile.am
     hello-objc-gnustep         .strings                GNUmakefile
 
+The Makefiles in the po/ directories make use of the variable assignment
+operator != standardized by POSIX:2024
+<https://pubs.opengroup.org/onlinepubs/9799919799/utilities/make.html>.
+They thus require a 'make' implementation that supports this operator !=.
+As of 2024, these are: GNU make >= 4.0, FreeBSD make, NetBSD make,
+OpenBSD make. This means that building on specific platforms requires
+use of GNU make:
+  - On macOS, use /opt/homebrew/bin/gmake.
+  - On Solaris 11 OpenIndiana, use /usr/bin/gmake = /usr/gnu/bin/make.
+  - On Solaris 11.4, install GNU make yourself.
+  - On AIX, use /opt/freeware/bin/make.
