New example 'hello-ruby'.
* gettext-tools/examples/hello-ruby: New directory, based on
gettext-tools/examples/hello-php.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Update.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS,
SMALLPOFILES_FOR_lang): Update.
* gettext-tools/examples/README: Update.
* gettext-tools/examples/check-examples: Handle this directory as well.
* NEWS: Mention the new example.

--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -29,6 +29,7 @@ environment.
     hello-java-qtjambi         Java              Qt
     hello-csharp               C#
     hello-csharp-forms         C#                Forms
+    hello-ruby                 Ruby
     hello-gawk                 awk
     hello-pascal               Pascal
     hello-ycp                  YCP               libyui
@@ -70,6 +71,7 @@ Makefile types:
     hello-librep               .gmo                    Makefile.am
     hello-guile                .gmo                    Makefile.am
     hello-smalltalk            .gmo                    Makefile.am
+    hello-ruby                 .gmo                    Makefile.am
     hello-gawk                 .gmo                    Makefile.am
     hello-pascal               .gmo                    Makefile.am
     hello-ycp                  .gmo                    Makefile.am
