--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@ Version 0.24 - December 2024
 # Improvements for maintainers:
   * The contents of the po/ directory has been changed:
     - A file Makefile.in replaces the old Makefile.in.in.
+# Programming languages support:
+  * Ruby:
+    - A new example 'hello-ruby' has been added.
 
 Version 0.23 - December 2024
 
