--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -6,17 +6,17 @@ environment.
     Example                    Language          GUI Environment
 
     hello-c                    C
-    hello-c-gnome              C                 GNOME (obsolete)
+    hello-c-gnome2             C                 GNOME 2 (obsolete)
     hello-c-gnome3             C                 GNOME 3.10 or later
     hello-c++                  C++
     hello-c++20                C++ 20
     hello-c++-qt               C++               Qt
     hello-c++-kde              C++               KDE
-    hello-c++-gnome            C++               GNOME (obsolete)
+    hello-c++-gnome2           C++               GNOME 2 (obsolete)
     hello-c++-wxwidgets        C++               wxWidgets
     hello-objc                 ObjectiveC
     hello-objc-gnustep         ObjectiveC        GNUstep
-    hello-objc-gnome           ObjectiveC        GNOME (obsolete)
+    hello-objc-gnome2          ObjectiveC        GNOME 2 (obsolete)
     hello-sh                   Shell
     hello-python               Python
     hello-clisp                Lisp
@@ -56,14 +56,14 @@ Makefile types:
     Example                    Binary catalog format   Makefile type
 
     hello-c                    .gmo                    Makefile.in
-    hello-c-gnome              .gmo                    Makefile.in
+    hello-c-gnome2             .gmo                    Makefile.in
     hello-c-gnome3             .gmo                    Makefile.in
     hello-c++                  .gmo                    Makefile.in
     hello-c++20                .gmo                    Makefile.in
     hello-c++-kde              .gmo                    Makefile.in
-    hello-c++-gnome            .gmo                    Makefile.in
+    hello-c++-gnome2           .gmo                    Makefile.in
     hello-objc                 .gmo                    Makefile.in
-    hello-objc-gnome           .gmo                    Makefile.in
+    hello-objc-gnome2          .gmo                    Makefile.in
     hello-c++-wxwidgets        .gmo                    Makefile.am
     hello-sh                   .gmo                    Makefile.am
     hello-python               .gmo                    Makefile.am
