doc: Update list of dependencies.
* gettext-tools/doc/lang-csharp.texi: Mention dotnet8 as alternative.
* gettext-tools/tests/lang-csharp: Likewise.
* gettext-tools/doc/lang-pascal.texi: Replace fpk with fpc.
* gettext-tools/tests/lang-pascal: Likewise.
* gettext-tools/doc/lang-wxwidgets.texi: Mention libwxgtk3.2-dev as alternative.
* gettext-tools/tests/lang-objc: Mention the gobjc package.
* gettext-tools/tests/lang-rst: Mention the fp-utils package.
* gettext-tools/tests/lang-vala: Mention valac as alternative.

--- a/gettext-tools/doc/lang-wxwidgets.texi
+++ b/gettext-tools/doc/lang-wxwidgets.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2020 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2024 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @node wxWidgets
@@ -11,7 +11,7 @@
 wxGTK, gettext
 
 @item Ubuntu packages
-libwxgtk3.0-dev
+libwxgtk3.0-dev or libwxgtk3.2-dev
 
 @item File extension
 @code{cpp}
