--- a/gettext-tools/doc/lang-csharp.texi
+++ b/gettext-tools/doc/lang-csharp.texi
@@ -1,5 +1,5 @@
 @c This file is part of the GNU gettext manual.
-@c Copyright (C) 1995-2020 Free Software Foundation, Inc.
+@c Copyright (C) 1995-2024 Free Software Foundation, Inc.
 @c See the file gettext.texi for copying conditions.
 
 @node C#
@@ -8,10 +8,10 @@
 
 @table @asis
 @item RPMs
-mono
+mono or dotnet8.0
 
 @item Ubuntu packages
-mono-mcs
+mono-mcs or dotnet8
 
 @item File extension
 @code{cs}
