--- a/HACKING
+++ b/HACKING
@@ -326,6 +326,13 @@ also need to install:
       - On Debian and Debian-based systems: libgtk-3-dev,
       - On Red Hat distributions: gtk3-devel.
       - Other: https://repology.org/project/gtk/versions
+  * Its C++ bindings
+    + Homepage: https://gtkmm.gnome.org/
+      and:      https://www.gtk.org/docs/language-bindings/cpp
+    + Pre-built package name:
+      - On Debian and Debian-based systems: libgtkmm-3.0-dev,
+      - On Red Hat distributions: gtkmm3.0-devel.
+      - Other: https://repology.org/project/gtkmm/versions
 
   * The Qt GUI toolkit library
     + Homepage: https://www.qt.io/
