--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ Version 0.24 - December 2024
   * The contents of the po/ directory has been changed:
     - A file Makefile.in replaces the old Makefile.in.in.
 # Programming languages support:
+  * C++:
+    - A new example 'hello-c++-gnome3' has been added.
   * Ruby:
     - A new example 'hello-ruby' has been added.
 
