--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -13,6 +13,7 @@ environment.
     hello-c++-qt               C++               Qt
     hello-c++-kde              C++               KDE
     hello-c++-gnome2           C++               GNOME 2 (obsolete)
+    hello-c++-gnome3           C++               GNOME 3.10 or later
     hello-c++-wxwidgets        C++               wxWidgets
     hello-objc                 ObjectiveC
     hello-objc-gnustep         ObjectiveC        GNUstep
@@ -62,6 +63,7 @@ Makefile types:
     hello-c++20                .gmo                    Makefile.in
     hello-c++-kde              .gmo                    Makefile.in
     hello-c++-gnome2           .gmo                    Makefile.in
+    hello-c++-gnome3           .gmo                    Makefile.in
     hello-objc                 .gmo                    Makefile.in
     hello-objc-gnome2          .gmo                    Makefile.in
     hello-c++-wxwidgets        .gmo                    Makefile.am
