Prepare for 0.23.1 release.
* gettext-runtime/intl/libgnuintl.in.h (LIBINTL_VERSION): Bump.
* libtextstyle/version.sh: Update VERSION_NUMBER, RELEASE_DATE.
* gettext-tools/libgettextpo/gettext-po.in.h (LIBGETTEXTPO_VERSION): Bump.
* gettext-runtime/intl/Makefile.am (LTV_*): Bump to 12:2:4.
* libtextstyle/lib/Makefile.am (LTV_*): Bump to 2:3:2.
* gettext-tools/libgettextpo/Makefile.am (LTV_*): Bump to 5:12:5.
* gettext-tools/misc/autopoint.in: Likewise. Accept version 0.23.1.
* gettext-tools/configure.ac (ARCHIVE_VERSION): Bump to 0.23.1.
* NEWS: Update.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Version 0.23.1 - December 2024
+
+* Bug fixes:
+  - Building with libxml2 >= 2.12.0 and gcc >= 14 now works.
+  - XML: The value of the xml:lang attribute, inserted by msgfmt, is now
+    more correct.
+
 Version 0.23 - December 2024
 
 # Internationalized data formats:
