xgettext: JavaScript: Parse recursive JSX expressions correctly.
Reported by <fiurgeist@gmail.com> at <https://savannah.gnu.org/bugs/?66643>.

* gettext-tools/src/x-javascript.c (phase5_get): Treat a '<' character in
level type level_embedded_js_in_xml like in the other level types.
* gettext-tools/tests/xgettext-javascript-6: Add another test case.
* NEWS: Mention the fix.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ Version 0.24 - January 2025
   * The contents of the po/ directory has been changed:
     - A file Makefile.in replaces the old Makefile.in.in.
 # Programming languages support:
+  * JavaScript:
+    - xgettext now parses recursive JSX expressions correctly.
   * C++:
     - A new example 'hello-c++-gnome3' has been added.
   * Ruby:
