--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,10 @@ Version 0.24 - January 2025
 # Programming languages support:
   * JavaScript:
     - xgettext now parses recursive JSX expressions correctly.
+  * Rust:
+    - xgettext now supports Rust.
+    - 'msgfmt -c' now verifies the syntax of translations of Rust format
+      strings.
   * C++:
     - A new example 'hello-c++-gnome3' has been added.
   * Ruby:
