examples: Add hello-rust example.
* gettext-tools/examples/hello-rust/INSTALL: New file.
* gettext-tools/examples/hello-rust/autogen.sh: New file.
* gettext-tools/examples/hello-rust/autoclean.sh: New file.
* gettext-tools/examples/hello-rust/Cargo.toml.in: New file.
* gettext-tools/examples/hello-rust/src/main.rs.in: New file.
* gettext-tools/examples/hello-rust/Makefile.am: New file.
* gettext-tools/examples/hello-rust/configure.ac: New file.
* gettext-tools/examples/hello-rust/m4/Makefile.am: New file.
* gettext-tools/examples/hello-rust/po/Makefile.am: New file.
* gettext-tools/examples/hello-rust/po/LINGUAS: New file.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-rust.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-rust.
(hello-rust.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-rust.
($(srcdir)/../hello-rust/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-rust as well.
(func_check): Add a more useful body.
* gettext-tools/examples/README: Mention hello-rust.
* NEWS: Likewise.

--- a/gettext-tools/examples/README
+++ b/gettext-tools/examples/README
@@ -30,6 +30,7 @@ environment.
     hello-java-qtjambi         Java              Qt
     hello-csharp               C#
     hello-csharp-forms         C#                Forms
+    hello-rust                 Rust
     hello-ruby                 Ruby
     hello-gawk                 awk
     hello-pascal               Pascal
@@ -73,6 +74,7 @@ Makefile types:
     hello-librep               .gmo                    Makefile.am
     hello-guile                .gmo                    Makefile.am
     hello-smalltalk            .gmo                    Makefile.am
+    hello-rust                 .gmo                    Makefile.am
     hello-ruby                 .gmo                    Makefile.am
     hello-gawk                 .gmo                    Makefile.am
     hello-pascal               .gmo                    Makefile.am
