--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ Version 0.24 - January 2025
     - xgettext now supports Rust.
     - 'msgfmt -c' now verifies the syntax of translations of Rust format
       strings.
+    - A new example 'hello-rust' has been added.
   * C++:
     - A new example 'hello-c++-gnome3' has been added.
   * Ruby:
