--- a/gettext-tools/doc/xgettext.texi
+++ b/gettext-tools/doc/xgettext.texi
@@ -72,14 +72,34 @@ is written to standard output.
 @opindex -L@r{, @code{xgettext} option}
 @opindex --language@r{, @code{xgettext} option}
 @cindex supported languages, @code{xgettext}
-Specifies the language of the input files.  The supported languages
-are @code{C}, @code{C++}, @code{ObjectiveC}, @code{PO}, @code{Shell},
-@code{Python}, @code{Lisp}, @code{EmacsLisp}, @code{librep}, @code{Scheme},
-@code{Guile}, @code{Smalltalk}, @code{Java}, @code{JavaProperties},
-@code{C#}, @code{Rust}, @code{Ruby}, @code{awk}, @code{YCP},
-@code{Tcl}, @code{Perl}, @code{PHP}, @code{GCC-source}, @code{NXStringTable},
-@code{RST}, @code{RSJ}, @code{Glade}, @code{Lua}, @code{JavaScript},
-@code{Vala}, @code{GSettings}, @code{Desktop}.
+Specifies the language of the input files.  The supported languages are
+@code{C}, @code{C++}, @code{ObjectiveC},
+@code{PO},
+@code{Python},
+@code{Java}, @code{JavaProperties},
+@code{C#},
+@code{JavaScript},
+@code{Scheme}, @code{Guile},
+@code{Lisp},
+@code{EmacsLisp},
+@code{librep},
+@code{Rust},
+@code{Ruby},
+@code{Shell},
+@code{awk},
+@code{Lua},
+@code{Smalltalk},
+@code{Vala},
+@code{Tcl},
+@code{Perl},
+@code{PHP},
+@code{GCC-source},
+@code{YCP},
+@code{NXStringTable},
+@code{RST}, @code{RSJ},
+@code{Glade},
+@code{GSettings},
+@code{Desktop}.
 
 @item -C
 @itemx --c++
@@ -225,9 +245,27 @@ Expect at least two whitespaces after a period
 @opindex --extract-all@r{, @code{xgettext} option}
 Extract all strings.
 
-This option has an effect with most languages, namely C, C++, ObjectiveC,
-Shell, Python, Lisp, EmacsLisp, librep, Java, C#, awk, Tcl, Perl, PHP,
-GCC-source, Glade, Lua, JavaScript, Vala, GSettings.
+This option has an effect with most languages, namely
+C, C++, ObjectiveC,
+Python,
+Java,
+C#,
+JavaScript,
+Scheme, Guile,
+Lisp,
+EmacsLisp,
+librep,
+Rust,
+Shell,
+awk,
+Lua,
+Vala,
+Tcl,
+Perl,
+PHP,
+GCC-source,
+Glade,
+GSettings.
 
 @item -k[@var{keywordspec}]
 @itemx --keyword[=@var{keywordspec}]
@@ -268,9 +306,28 @@ comment @var{xcomment} to the message.  Note that when used through a normal
 shell command line, the double-quotes around the @var{xcomment} need to be
 escaped.
 
-This option has an effect with most languages, namely C, C++, ObjectiveC,
-Shell, Python, Lisp, EmacsLisp, librep, Java, C#, awk, Tcl, Perl, PHP,
-GCC-source, Glade, Lua, JavaScript, Vala, GSettings, Desktop.
+This option has an effect with most languages, namely
+C, C++, ObjectiveC,
+Python,
+Java,
+C#,
+JavaScript,
+Scheme, Guile,
+Lisp,
+EmacsLisp,
+librep,
+Rust,
+Shell,
+awk,
+Lua,
+Vala,
+Tcl,
+Perl,
+PHP,
+GCC-source,
+Glade,
+GSettings,
+Desktop.
 
 The default keyword specifications, which are always looked for if not
 explicitly disabled, are language dependent.  They are:
@@ -405,9 +462,26 @@ together with the checks done by @samp{msgfmt -c} it will ensure that
 translators cannot accidentally use format string directives that would
 lead to a crash at runtime.
 @*
-This option has an effect with most languages, namely C, C++, ObjectiveC,
-Shell, Python, Lisp, EmacsLisp, librep, Scheme, Guile, Java, C#, awk,
-YCP, Tcl, Perl, PHP, GCC-source, Lua, JavaScript, Vala.
+This option has an effect with most languages, namely
+C, C++, ObjectiveC,
+Python,
+Java,
+C#,
+JavaScript,
+Scheme, Guile,
+Lisp,
+EmacsLisp,
+librep,
+Rust,
+Shell,
+awk,
+Lua,
+Vala,
+Tcl,
+Perl,
+PHP,
+GCC-source,
+YCP.
 
 @item --tag=@var{word}:@var{format}
 @opindex --tag@r{, @code{xgettext} option}
