Rust: Reference the example in the documentation.
* gettext-tools/doc/lang-rust.texi: Reference the example.

--- a/gettext-tools/doc/lang-rust.texi
+++ b/gettext-tools/doc/lang-rust.texi
@@ -123,4 +123,6 @@ fully portable
 ---
 @end table
 
+An example is available in the @file{examples} directory: @code{hello-rust}.
+
 @c Rust me harder. Cargo me to hell.
